--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -12,7 +12,7 @@
     <div class = "main">
         <head>
             <h1>
-                Hello There
+                {{title}}
             </h1>
         </head>
         
